2010-10-12  Jakub Jelinek  <jakub@redhat.com>

	PR fortran/45636
	* gcc.c-torture/execute/pr45636.c: New test.
	* gfortran.dg/pr45636.f90: New test.

2010-10-12  Richard Henderson  <rth@redhat.com>

	* g++.dg/abi/mangle40.C: Robustify tests for defined symbols.

2010-10-12  Daniel Kraft  <d@domob.eu>

	PR fortran/38936
	* gfortran.dg/associate_1.f03: More tests with derived-types.
	* gfortran.dg/associate_9.f03: New test (XFAIL for now).
	* gfortran.dg/associate_8.f03: Fix typo.
	* gfortran.dg/initialization_27.f90: Fix typo.

2010-10-12  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	PR testsuite/45851
	* lib/lto.exp (lto-get-options-main): Support optional target
	selector for dg-extra-ld-options.

2010-10-12  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* gcc.dg/pragma-init-fini.c: Skip on i?86-*-solaris2.8 && !gas.
	* gcc.dg/pragma-init-fini-2.c: XFAIL on i?86-*-solaris2.8 && !gas.

2010-10-11  Martin Jambor  <mjambor@suse.cz>

	PR middle-end/45699
	* g++.dg/torture/pr45699.C: New test.
	* g++.dg/otr-fold-1.C: Adjusted.
	* g++.dg/otr-fold-1.C: Likewise.

2010-10-11  Nick Clifton  <nickc@redhat.com>

	* gcc.c-torture/compile/pr44197.c: Require visibility support.
        Allow for a user label prefix.

2010-10-10  Richard Guenther  <rguenther@suse.de>

	* g++.dg/lto/20101010-1_0.C: New testcase.
	* g++.dg/lto/20101010-2_0.C: Likewise.

2010-10-11  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/45902
	* gcc.dg/vect/45902.c: New test.

2010-10-11  Jakub Jelinek  <jakub@redhat.com>

	PR target/45870
	* gcc.dg/tls/pr45870.c: New test.

2010-10-10  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/45961
	* gfortran.dg/typebound_operator_6.f03: New.

2010-10-10  Kai Tietz  <kai.tietz@onevision.com>

	* g++.dg/ext/dllexport-MI1.C: Enable for x86_64 mingw
	and adjust -export symbol scanning.
	* g++.dg/ext/dllexport1.C: Likewise.
	* g++.dg/ext/dllexport3.C: Likewise.
	* gcc.dg/dll-3.c: Likewise.
	* gcc.dg/dll-4.c: Likewise.
	* gcc.dg/dll-5.c: Likewise.
