@@ -65,70 +65,70 @@ float args[] =
 
 int correct_results[] =
 {
-  T, F, F, T, F, T, F, T, F, T,
-  F, T, T, F, F, T, T, F, F, T,
-  F, T, F, T, T, F, T, F, F, T,
-  F, T, T, F, F, T, T, F, F, T,
-  F, T, F, T, T, F, T, F, F, T,
-  F, T, F, T, T, F, T, F, F, T,
-  F, T, T, F, F, T, T, F, F, T,
-  F, T, F, T, T, F, T, F, F, T,
-  F, T, F, T, T, F, F, T, T, F,
-  T, F, F, T, F, T, F, T, F, T,
-  F, T, F, T, T, F, T, F, F, T,
-  F, T, T, F, F, T, T, F, F, T,
-  F, T, F, T, T, F, T, F, F, T,
-  F, T, F, T, T, F, T, F, F, T,
-  F, T, T, F, F, T, T, F, F, T,
-  F, T, F, T, T, F, T, F, F, T,
-  F, T, T, F, F, T, F, T, T, F,
-  F, T, T, F, F, T, F, T, T, F,
-  T, F, F, T, F, T, F, T, F, T,
-  F, T, T, F, F, T, F, T, T, F,
-  F, T, F, T, T, F, F, T, T, F,
-  F, T, F, T, T, F, F, T, T, F,
-  F, T, T, F, F, T, F, T, T, F,
-  F, T, F, T, T, F, F, T, T, F,
-  F, T, F, T, T, F, F, T, T, F,
-  F, T, F, T, T, F, F, T, T, F,
-  F, T, F, T, T, F, T, F, F, T,
-  T, F, F, T, F, T, F, T, F, T,
-  F, T, F, T, T, F, T, F, F, T,
-  F, T, F, T, T, F, T, F, F, T,
-  F, T, F, T, T, F, F, T, T, F,
-  F, T, F, T, T, F, T, F, F, T,
-  F, T, T, F, F, T, F, T, T, F,
-  F, T, T, F, F, T, F, T, T, F,
-  F, T, T, F, F, T, T, F, F, T,
-  F, T, T, F, F, T, F, T, T, F,
-  T, F, F, T, F, T, F, T, F, T,
-  F, T, T, F, F, T, T, F, F, T,
-  F, T, T, F, F, T, F, T, T, F,
-  F, T, T, F, F, T, T, F, F, T,
-  F, T, T, F, F, T, F, T, T, F,
-  F, T, T, F, F, T, F, T, T, F,
-  F, T, T, F, F, T, T, F, F, T,
-  F, T, T, F, F, T, F, T, T, F,
-  F, T, F, T, T, F, F, T, T, F,
-  T, F, F, T, F, T, F, T, F, T,
-  F, T, T, F, F, T, F, T, T, F,
-  F, T, T, F, F, T, T, F, F, T,
-  F, T, F, T, T, F, F, T, T, F,
-  F, T, F, T, T, F, F, T, T, F,
-  F, T, F, T, T, F, T, F, F, T,
-  F, T, T, F, F, T, T, F, F, T,
-  F, T, F, T, T, F, T, F, F, T,
-  F, T, F, T, T, F, T, F, F, T,
-  T, F, F, T, F, T, F, T, F, T,
-  F, T, F, T, T, F, T, F, F, T,
-  F, T, T, F, F, T, F, T, T, F,
-  F, T, T, F, F, T, F, T, T, F,
-  F, T, T, F, F, T, T, F, F, T,
-  F, T, T, F, F, T, F, T, T, F,
-  F, T, F, T, T, F, F, T, T, F,
-  F, T, F, T, T, F, F, T, T, F,
-  F, T, T, F, F, T, F, T, T, F,
-  T, F, F, T, F, T, F, T, F, T
+ T, F, F, T, F, T,                                             
+ F, T, T, F, F, T,                                             
+ F, T, F, T, T, F,                                             
+ F, T, T, F, F, T,                                             
+ F, T, T, F, F, T,                                             
+ F, T, T, F, F, T,                                             
+ F, T, T, F, F, T,                                             
+ F, T, F, T, T, F,                                             
+ F, T, F, T, T, F,                                             
+ T, F, F, T, F, T,                                             
+ F, T, F, T, T, F,                                             
+ F, T, T, F, F, T,                                             
+ F, T, F, T, T, F,                                             
+ F, T, F, T, T, F,                                             
+ F, T, T, F, F, T,                                             
+ F, T, F, T, T, F,                                             
+ F, T, T, F, F, T,                                             
+ F, T, T, F, F, T,                                             
+ T, F, F, T, F, T,                                             
+ F, T, T, F, F, T,                                             
+ F, T, T, F, F, T,                                             
+ F, T, T, F, F, T,                                             
+ F, T, T, F, F, T,                                             
+ F, T, F, T, T, F,                                             
+ F, T, F, T, T, F,                                             
+ F, T, F, T, T, F,
+ F, T, F, T, T, F,
+ T, F, F, T, F, T,
+ F, T, F, T, T, F,
+ F, T, F, T, T, F,
+ F, T, F, T, T, F,
+ F, T, F, T, T, F,
+ F, T, F, T, T, F,
+ F, T, T, F, F, T,
+ F, T, F, T, T, F,
+ F, T, T, F, F, T,
+ T, F, F, T, F, T,
+ F, T, T, F, F, T,
+ F, T, T, F, F, T,
+ F, T, F, T, T, F,
+ F, T, F, T, T, F,
+ F, T, T, F, F, T,
+ F, T, F, T, T, F,
+ F, T, T, F, F, T,
+ F, T, F, T, T, F,
+ T, F, F, T, F, T,
+ F, T, T, F, F, T,
+ F, T, F, T, T, F,
+ F, T, F, T, T, F,
+ F, T, F, T, T, F,
+ F, T, F, T, T, F,
+ F, T, T, F, F, T,
+ F, T, F, T, T, F,
+ F, T, F, T, T, F,
+ T, F, F, T, F, T,
+ F, T, F, T, T, F,
+ F, T, T, F, F, T,
+ F, T, T, F, F, T,
+ F, T, T, F, F, T,
+ F, T, T, F, F, T,
+ F, T, T, F, F, T,
+ F, T, T, F, F, T,
+ F, T, T, F, F, T,
+ T, F, F, T, F, T,
 };
 
 int
@@ -138,10 +138,10 @@ main (void)
 
   for (i = 0; i < 8; i++)
     {
-      long arg0 = args[i];
+      float arg0 = args[i];
       for (j = 0; j < 8; j++)
 	{
-	  long arg1 = args[j];
+	  float arg1 = args[j];
 
 	  if (feq (arg0, arg1) != *res++)
 	    abort ();
